# LovChat

./: .gitignore  README.md  pyproject.toml  render.yaml
gptlov/: bot.py  cli.py  data_pipeline.py  search_backends.py  server.py  settings.py
gptlov/static/: app.js  style.css
gptlov/templates/: index.html
labs_app/: README.md
labs_app/api/: app.py  chat.py
labs_app/frontend/: package.json
labs_app/frontend/public/: index.html
labs_app/frontend/src/: App 2.tsx  App.test.tsx  App.tsx
labs_app/frontend/src/components/: header.tsx  search_input.tsx  search_result 2.tsx  search_result.tsx  search_results.tsx  source_icon.tsx  source_item.tsx  status_timeline.tsx
labs_app/frontend/src/components/chat/: answer_message.tsx  chat.tsx  input.tsx  message.tsx  message_list.tsx  sources.tsx
labs_app/frontend/src/lib/: utils 2.ts  utils.ts
labs_app/frontend/src/store/: provider.tsx
labs_app/frontend/src/types/: index.ts
lovchat/: data_pipeline.py  ingest.py  server.py  settings.py
scripts/: prebuild_vector_store.py  run_labs_app.sh
